force-app/main/default/objects/Email_Thread__c/Email_Thread__c.object-meta.xml
<CustomObject>
    <description>Groups related Email_Processing_Log__c records by Gmail thread ID for conversation tracking</description>
    <label>Email Thread</label>
    <nameField>
        <displayFormat>ETH-{0000000}</displayFormat>
        <label>Thread Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Threads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>