force-app/main/default/objects/Email_Thread__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated booking record created from this email thread</description>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Email Threads</relationshipLabel>
    <relationshipName>Email_Threads</relationshipName>
    <type>Lookup</type>
</CustomField>