force-app/main/default/objects/Email_Thread__c/fields/First_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Date__c</fullName>
    <description>Date and time when the first email in this thread was received</description>
    <label>First Email Date</label>
    <type>DateTime</type>
</CustomField>