force-app/main/default/objects/Email_Thread__c/fields/Last_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Date__c</fullName>
    <description>Date and time of the most recent email in this thread</description>
    <label>Last Email Date</label>
    <type>DateTime</type>
</CustomField>