force-app/main/default/objects/Email_Thread__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Property location associated with this email thread</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Email Threads</relationshipLabel>
    <relationshipName>Email_Threads</relationshipName>
    <type>Lookup</type>
</CustomField>