force-app/main/default/objects/Email_Thread__c/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <description>Email address of the original sender who started the thread</description>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>