force-app/main/default/objects/Email_Thread__c/fields/Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Thread_Id__c</fullName>
    <description>Gmail thread ID used for grouping related emails</description>
    <externalId>true</externalId>
    <label>Thread Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>