force-app/main/default/objects/Email_Thread__c/fields/Thread_Status__c.field-meta.xml
<CustomField>
    <fullName>Thread_Status__c</fullName>
    <description>Current status of the email thread conversation</description>
    <label>Thread Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending_Response</fullName>
                <label>Pending Response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>